--- a/app/views/users/regist_profile.html.erb
+++ b/app/views/users/regist_profile.html.erb
@@ -25,8 +25,8 @@
         <h2 class="heading">経験年数</h2>
         <%= select_tag 'user[yser_of_experience]', options_for_select(["半年未満", "半年", "1", "2"]), class:"form-control" %>
       </li>
-      <li class="col-md-5 col-md-offset-3">
-        <%= form.submit :class=>"btn"%>
+      <li class="col-md-8 col-md-offset-3">
+        <%= form.submit :class=>"btnn"%>
       </li>
     </ul>
   </div>
