--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -1,9 +1,34 @@
+<% if @user.followers.present? %>
 <% @user.followers.each do |user| %>
-<table>
-<tr>
- <td>  <%= user.name %> </td>
- <td><%= link_to '詳細', user_path(user) %></td>
-</tr>
+				<div class="row">
+						 <div class="col-md-12">
+							<div class="media">
+                <a class="pull-left" href="#">
+                <% if @user.image.present? %>
+                  <%= image_tag current_user.image, class:"media-object dp img-circle", :size => "100x100"%>
+                <% else %>
+                  <%= image_tag 'noimage.png', class:"media-object dp img-circle", :size => "100x100"%>
+                <% end %>
+                </a>
+								<div class="media-body">
+									<h4 class="media-heading"> <small><%= user.name %></small></h4>
+                  <h5><%= @user.introduce %></h5>
+									<h5><%= @user.language %>/<%= @user.yser_of_experience %></h5>
+									<hr style="margin:8px auto">
+<br>
+                  <%= link_to '詳細', user_path(user), class:"label label-success" %>
+								</div>
+							</div>
 
+						</div>
+
+					</div>
+<%end%>
+
+<% else %>
+<table class="nothing">
+<tr>
+<td height="600">まだフォローしている人はいません</td>
+</tr>
 </table>
-<% end %>
+<%end%>
