titleに変更、ターボlinks消した

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,7 +10,7 @@
            <td><%= image_tag 'noimage.png' , :size => "300x250" %></td>
          <% end %>
          <div class="SlideBox">
-            <p class="Caption"><%= blog.content %></p>
+            <p class="Caption"><%= blog.title %></p>
             <ul class="Caption2">
             <li class="Caption2">name:<%= blog.user.name%></li>
             <li class="Caption2">
