レイアウト修正

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -22,9 +22,7 @@
         %>
       </div>
       <div class="post-content">
-        <%= form.text_area :content, class:'post-input',
-          placeholder:'マークダウン形式でも入力できます。'
-        %>
+        <%= form.text_area :content, class:'post-input'%>
       </div>
       <div class="post-content">
         <%= form.text_area :content2, class:'post-input',
